[package]
name = "ball_blitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.12.1"
bevy_xpbd_3d = "0.3.2"
blake3 = { version = "1.5", features=["pure"] }
rand = "0.8.5"
bevy_wasm_window_resize = "0.2.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Reduce code size for wasm build
[profile.release]
lto = true
opt-level = 's'

[features]
default = ["fast_build"]
fast_build = ["bevy/dynamic_linking"]
